@@ -148,7 +148,7 @@ def get_animal_data_query(dbo, pc, animalid=0, publisher_key=""):
     if not pc.includeCaseAnimals: 
         sql += " AND a.CrueltyCase = 0"
     if not pc.includeNonNeutered:
-        sql += " AND a.Neutered = 1"
+        sql += " AND (a.Neutered = 1 OR a.SpeciesID NOT IN (%s))" % asm3.configuration.alert_species_neuter(dbo)
     if not pc.includeWithoutImage: 
         sql += " AND EXISTS(SELECT ID FROM media WHERE WebsitePhoto = 1 AND ExcludeFromPublish = 0 AND LinkID = a.ID AND LinkTypeID = 0)"
     if not pc.includeReservedAnimals: 
@@ -361,7 +361,7 @@ def is_animal_adoptable(dbo, a):
     if a.HASFUTUREADOPTION == 1: return False
     if a.HASPERMANENTFOSTER == 1: return False
     if a.CRUELTYCASE == 1 and not p.includeCaseAnimals: return False
-    if a.NEUTERED == 0 and not p.includeNonNeutered: return False
+    if a.NEUTERED == 0 and not p.includeNonNeutered and str(a.SPECIESID) not in asm3.configuration.alert_species_neuter(dbo).split(","): return False
     if a.HASACTIVERESERVE == 1 and not p.includeReservedAnimals: return False
     if a.ISHOLD == 1 and not p.includeHold: return False
     if a.ISQUARANTINE == 1 and not p.includeQuarantine: return False
